--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 #
 # Project settings
 #
-group = com.enonic.tiny-blog
-projectName = Tiny-app
+group = com.enonic.tiny.blog
+projectName = Tiny app
 appName = com.enonic.tiny.blog
 xpVersion = 6.15.4
-version = 0.0.1-SNAPSHOT
+version = 0.0.2-SNAPSHOT
