--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ group = com.enonic.tiny.blog
 projectName = Tiny app
 appName = com.enonic.tiny.blog
 xpVersion = 6.15.4
-version = 0.0.2-SNAPSHOT
+version = 0.1.0
