--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@
 group = com.enonic.app
 projectName = tinyblog
 appName = com.enonic.app.tinyblog
-xpVersion = 6.12.3
-version = 1.0.1
+xpVersion = 7.0.0-B5
+version = 2.0.0
