--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'maven'
-    id 'com.enonic.defaults' version '1.0.3'
-    id 'com.enonic.xp.app' version '1.2.0'
+    id 'maven-publish'
+    id 'com.enonic.defaults' version '2.0.1'
+    id 'com.enonic.xp.app' version '2.0.0'
 }
 
 app {
@@ -17,16 +17,16 @@ dependencies {
     compile "com.enonic.xp:portal-api:${xpVersion}"
     include "com.enonic.xp:lib-content:${xpVersion}"
     include "com.enonic.xp:lib-portal:${xpVersion}"
-    include "com.enonic.xp:lib-thymeleaf:${xpVersion}"
-	 include 'com.enonic.lib:util:1.3.1'
+    include "com.enonic.lib:lib-thymeleaf:2.0.0"
+	//include 'com.enonic.lib:util:1.3.1'
+}
+
+wrapper {
+	gradleVersion = '5.0'
 }
 
 repositories {
     mavenLocal()
     jcenter()
     xp.enonicRepo()
-}
-
-wrapper {
-	gradleVersion = '4.10.2'
 }
