--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     include "com.enonic.xp:lib-content:${xpVersion}"
     include "com.enonic.xp:lib-portal:${xpVersion}"
     include "com.enonic.xp:lib-thymeleaf:${xpVersion}"
-	 include 'com.enonic.lib:util:1.3.1'
+    include "com.enonic.xp:lib-node:${xpVersion}"
+    include "com.enonic.xp:lib-context:${xpVersion}"
+	include 'com.enonic.lib:util:1.3.1'
 }
 
 repositories {
