--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'maven'
+    id 'maven-publish'
     id 'com.enonic.defaults' version '1.0.3'
     id 'com.enonic.xp.app' version '1.2.0'
 }
@@ -18,8 +18,6 @@ dependencies {
     include "com.enonic.xp:lib-content:${xpVersion}"
     include "com.enonic.xp:lib-portal:${xpVersion}"
     include "com.enonic.xp:lib-thymeleaf:${xpVersion}"
-    include "com.enonic.xp:lib-node:${xpVersion}"
-    include "com.enonic.xp:lib-context:${xpVersion}"
 	include 'com.enonic.lib:util:1.3.1'
 }
 
