--- a/.github/workflows/enonic-gradle.yml
+++ b/.github/workflows/enonic-gradle.yml
@@ -18,11 +18,6 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
-        with:
-          java-version: 11
-          distribution: 'adopt'
-
       - name: Get publishing variables
         id: publish_vars
         uses: enonic/release-tools/publish-vars@master
@@ -39,7 +34,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+        with:
+          submodules: true
       - uses: actions/setup-java@v2
         with:
           java-version: 11
@@ -56,7 +52,7 @@ jobs:
 
       - run: ./gradlew build -Pcom.enonic.xp.app.production=true
 
-      - uses: codecov/codecov-action@v2.0.2
+      - uses: codecov/codecov-action@v2
 
       - name: Publish
         if: needs.publish_vars.outputs.publish == 'true'
@@ -89,6 +85,7 @@ jobs:
 
       - name: Commit and push new version
         if: needs.publish_vars.outputs.release == 'true'
+        continue-on-error: true
         uses: EndBug/add-and-commit@v7
         with:
           add: ./gradle.properties
