--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ group = com.enonic.app
 projectName = tinyblog
 appName = com.enonic.app.tinyblog
 xpVersion = 7.0.0
-version=2.1.0-SNAPSHOT
+version=2.0.1
